
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 MAY 04b
  * in tools/replace.sh
    - added the escaping of '(' and ')' for the mode perl

  
2019 MAY 04a
  * in *.c files
    - within the license inserted word wraps at the 90th column for better readability


2019 MAY 03c
  * in tools/replace.sh
    - added the mode pureperl which permits the search and replace of end of line characters


2019 MAY 03b
  * in LICENSES/CFDWARP-Proprietary
    - minor change 


2019 MAY 03a
  * in LICENSES/CFDWARP-Proprietary
    - applied word wrapping at the 90th column for better readability
  * in various proprietary C files
    - applied word wrapping in CFDWARP-Proprietary license


2019 MAY 02c
  * in README
    - removed statement about LICENSE
  * in lib/latex/
    - updated the warplogo.xvf and all export files


2019 MAY 02b
  * replaced in all *.wrp files
    - 'A CFD Code for Plasma' -> ' CFD Code for Plasma' 
  * in src/control.c
    - in write_modules(), replaced 'A CFD Code for Plasma' for ' CFD Code for Plasma' 
  * in README
    - replaced 'A CFD Code for Plasma' for ' CFD Code for Plasma'
  * in cycle/resconv/_MUSCL/resconv.c
    - in write_disc_resconv_template(), changed the default INTERPOL from AOWENO7 to TVD2_VANLEER


2019 MAY 02a
  * created directory LICENSES
  * deleted LICENSE
  * in LICENSES added 
    - CFDWARP-Proprietary
    - BSD-2-Clause
  * in all .c and .h files
    - added either the BSD-2-Clause or the CFDWARP-Proprietary license 
  * in tools
    - removed test.c


2019 APR 29a
  * in bin
    - updated ns_SDBD.wrp


2019 APR 25a
  * in bin
    - got rid of FACEINTEG=FACEINTEG_CENTRAL1; within MUSCL() module
  * in USAGE
    - added post.02 after -opm flag 


2019 APR 20a
​  * in src/common.h
​    - in struct() gl_t, declared char *post_filename (VanTien)