@@ -176,7 +176,6 @@ Disc(
     EIGENVALCOND=EIGENVALCOND_GNOFFO;
     POSFILTER=POSFILTER_NONE;
     POSFILTER_numiter=4;
-    FACEINTEG=FACEINTEG_CENTRAL3;
   );
 
 );
